Added a double-triangle icon to the left of the vertical zoom buttons
Fixed: Chart series curves prevent grabbing of the chart playback cursor
Added a check box for enabling/disabling sound
Added reset for chart maximized/minimized and zoom settings
Fixed reset all for charts minimize/maximize
Added domain tick labels in the charts
Fixed: Horizontal zoom will be available on the bottom chart only, near the time axis, and vertical zoom buttons will be near the top of each chart
Added some padding insets to the left and bottom of the simulation panel in the chart module
Only show the domain axis labels for the bottom chart
Horizontal zoom is able to zoom in to 2.0 seconds
Vertical zoom works as a scale factor, not as an addition term
Made the y=0 grid line thicker and darker
Made walls twice as thick
Fixed: Vectors do not update when reversing the x-axis
Added audio during crashes with wall
Added a time readout
Fixed: Vectors should have same thickness as in original moving man
Fixed: Vectors should be located at character's feet
Fixed: Vectors should be semitransparent
Fixed: Acceleration should be green, not magenta
Fixed: Acceleration vector scale should be much larger so that setting a value on the acceleration slider is visible in the play area vector
Fixed: Ticks and labels on charts are intercepting events.
Added a tick mark to the middle of horizontal sliders
# 1.28.02 (42016) Jun 30, 2010
Internationalized strings
Switched to m/s^2 to support pre-existing translations specified as html.
Fixed: When you resize the "graph playback cursor" doesn't redraw itself until you grab it or start playing it
Added text for chart maximize buttons
Fixed: Axes alignment is broken on horizontal zoom
Changed the layout of charts so that they use all available vertical space.
Increased font size for readouts in chart tab
Factored out creation of chart slider node thumbnails
Factored out cursor usage
Moved charts to common code
# 1.28.01 (41829) Jun 21, 2010